remove default styling on cite elements for quotes, remove unused stylesheets, break out homepage styles to include

--- a/web/assets/scss/components/_search.scss
+++ b/web/assets/scss/components/_search.scss
@@ -58,7 +58,9 @@
 .search-open {
   @include font-buttons;
   cursor: pointer;
-  text-decoration: underline;
+  &:hover {
+    text-decoration: underline;
+  }
   padding: 0 2*$beat 2*$beat 0;
 
   .icon-search {
