--- a/web/assets/scss/helpers/_normalize.scss
+++ b/web/assets/scss/helpers/_normalize.scss
@@ -404,3 +404,8 @@ table {
     border-collapse: collapse;
     border-spacing: 0;
 }
+
+cite {
+    font-style: normal;
+    font-weight: normal;
+}
