--- a/templates/services/_entry.html
+++ b/templates/services/_entry.html
@@ -2,6 +2,17 @@
 {% set title = category.title %}
 {% set bodyClass = 'overlapping-header' %}
 
+{% block filters %}
+  <h2 class="font-nav"><a href="/services/">Services</a></h2>
+  <ul class="filters semantic-only-list">
+    {% for cat in craft.categories.group('services').all() %}
+      <li class="{{ active(cat.url, 'url', 'current') }}">
+        <a href="{{ cat.url }}">{{ cat.title }}</a>
+      </li>
+    {% endfor %}
+  </ul>
+{% endblock %}
+
 {% block content %}
 
   <article class="single-service" data-id="{{ category.id }}">
@@ -13,13 +24,15 @@
     %}
 
     <!-- intro -->
-    <div class="row -halves secondary-page-intro">
-      <div class="row-block top-overlap-p">
-        <div class="page-intro module text-module background-white text-black">
-          <div class="user-content">{{ category.body }}</div>
+    {% if category.body|striptags|trim != '' %}
+      <div class="row -halves secondary-page-intro">
+        <div class="row-block top-overlap-p">
+          <div class="page-intro module text-module background-white text-black">
+            <div class="user-content">{{ category.body }}</div>
+          </div>
         </div>
       </div>
-    </div>
+    {% endif %}
 
     {% set relatedProjects = craft.entries({
       section: 'projects',
