--- a/web/assets/scss/components/_media-blocks.scss
+++ b/web/assets/scss/components/_media-blocks.scss
@@ -14,34 +14,36 @@
     padding: 1.5*$padding-lg $padding-lg;
   }
 
-  .centering-wrap {
-    @include media-md {
-      width: 100%;
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: space-between;
-
+  .stat-one-figure-wrap {
+    position: relative;
+    width: 100%;
+    display: flex;
+    flex-wrap: no-wrap;
+    justify-content: space-between;
+    .slash,
+    .label,
+    .figure {
+      flex-grow: 1;
+      flex-basis: content;
     }
-  }
-
-  .figure {
-    padding-right: 12px;
-
-    @include media-md {
-      max-width: 50%
+    .figure {
+      max-width: 90%;
     }
+    // .label,
+    // .figure {
+    //   max-width: 40%;
+    //   @include media-md {
+    //     max-width: none;
+    //   }
+    // }
 
-    .slash-wrap {
+    .slash {
       position: relative;
-      display: inline-block;
-      padding-right: 4*$beat;
-
-      @include media-md {
-        // width: 100%;
-      }
-
+      flex-grow: 2;
+      padding: 0 3*$beat;
       &::after {
-        right: 0;
+        position: absolute;
+        right: 50%;
         width: 2px;
         content: '';
         top: .1em;
@@ -60,14 +62,13 @@
 
   .label {
     @include font-details;
-    margin-top: $beat;
-    // width: 100%;
+    margin: $beat 0;
     max-width: 200px;
+    text-align: right;
+    align-self: flex-end;
 
     @include media-md {
-      text-align: right;
       max-width: 18*$beat;
-      align-self: flex-end;
       &.-wrapped {
         text-align: left;
       }
@@ -123,7 +124,6 @@
   }
 
   .label {
-    @include font-details;
     display: block;
     margin: $beat 0 0;
   }
@@ -248,10 +248,6 @@
       float: left;
       margin-right: 2*$beat;
       margin-bottom: 2*$beat;
-      &.-right {
-        float: right;
-        margin-right: 0;
-      }
 
       &:last-child {
         margin-right: 0;
