--- a/web/assets/scss/helpers/_variables.scss
+++ b/web/assets/scss/helpers/_variables.scss
@@ -27,6 +27,7 @@ $landscape-padding: 66.66%;
 $portrait-padding: 133.33%;
 
 // Header vars
+$header-height-sm: 94px;
 $header-height-md: 112px;
 $header-height-lg: 168px;
 
