change offwhite text to white

--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,7 @@
               </div>
             </div>
             <div class="row-block">
-              <div class="module text-module background-{{ projectColor }} text-off-white font-smoothing featured-project">
+              <div class="module text-module background-{{ projectColor }} text-white font-smoothing featured-project">
                 <p class="font-h1">{{ project.projectTagline }}</p>
                 <div class="buttons -bottom">
                   <div class="row -halves">
