--- a/templates/news/index.html
+++ b/templates/news/index.html
@@ -69,7 +69,7 @@
           {% endif %}
         </div>
         <div class="row -halves">
-            <li class="row-block -right background-black text-off-white font-smoothing featured-post-block">
+            <li class="row-block -right background-black text-white font-smoothing featured-post-block">
               {% include 'news/_article' %}
             </li>
         </div>
