--- a/templates/partials/media-blocks/_video.html
+++ b/templates/partials/media-blocks/_video.html
@@ -13,7 +13,7 @@
   <div class="theater image-wrap -hd-ratio">
     <div class="image lazy" style="background-image: url();" data-original="{{ image ? image.getUrl('header') : '' }}">
       {% if block.youtubeUrl %}
-        <button class="button -solid theater-play text-off-white background-red absolute-center">Play Video<svg class="icon icon-triangle"><use xlink:href="#icon-triangle" /></svg></button>
+        <button class="button -solid theater-play text-white background-red absolute-center">Play Video<svg class="icon icon-triangle"><use xlink:href="#icon-triangle" /></svg></button>
       {% endif %}
     </div>
     {% if block.youtubeUrl %}
