--- a/web/assets/scss/pages/_pages.scss
+++ b/web/assets/scss/pages/_pages.scss
@@ -1,7 +1,7 @@
 .page-impact {
   .featured-post-block {
     .category {
-      color: $off-white;
+      color: $white;
     }
   }
   .row .row-block {
