change featured news post to 2-column square aspect ratio, make category text white

--- a/web/assets/scss/components/_articles.scss
+++ b/web/assets/scss/components/_articles.scss
@@ -100,6 +100,11 @@
   }
 }
 
+// Override red category on text-white (mostly for featured news posts)
+.text-white > .post-module .category {
+  color: $white;
+}
+
 // Person Articles
 .person-module {
   .title {
