--- a/templates/news/index.html
+++ b/templates/news/index.html
@@ -59,22 +59,22 @@
 
   {% if not craft.app.request.isAjax %}
      {# header (w/ featured post) #}
-    <div class="hero-wrap">
-      {% if featuredImpact %}
-        {% set post = featuredImpact %}
-        <div class="hero-image image-wrap">
-          {% set impactImage = post.impactImage[0] ?? null %}
-          {% if impactImage %}
-            <div class="lazy image" style="background-image: url('');" data-original="{{ impactImage.getUrl('thumb') }}"></div>
-          {% endif %}
-        </div>
-        <div class="row -halves">
-            <li class="row-block -right background-black text-white font-smoothing featured-post-block">
-              {% include 'news/_article' %}
-            </li>
-        </div>
-      {% endif %}
-    </div>
+    {% if featuredImpact %}
+      {% set post = featuredImpact %}
+      <div class="row -halves">
+          <li class="row-block">
+            <div class="image-wrap -square">
+              {% set impactImage = post.impactImage[0] ?? null %}
+              {% if impactImage %}
+                <a class="lazy image" href="{{ post.getUrl() }}" style="background-image: url('');" data-original="{{ impactImage.getUrl('thumb') }}"></a>
+              {% endif %}
+            </div>
+          </li>
+          <li class="row-block background-black text-white font-smoothing featured-post-block">
+            {% include 'news/_article' %}
+          </li>
+      </div>
+    {% endif %}
   {% endif %}
 
   <ul class="row -halves -separators semantic-only-list infinite-scroll-container">
