--- a/web/assets/scss/helpers/_variables.scss
+++ b/web/assets/scss/helpers/_variables.scss
@@ -4,6 +4,7 @@
 $black: #282826; // ID file: "Soft Black"
 $red: #ff422d; // ID file: "AEI Red"
 $concrete-med: #87847f;
+$concrete-light2: #d1ccc2;
 $concrete-light: #e1ddd6;
 $off-white: #f4f2ed;
 $white: #fff;
