--- a/web/assets/scss/main.scss
+++ b/web/assets/scss/main.scss
@@ -38,8 +38,10 @@
 @import "components/theater";
 @import "components/contact-modal";
 @import "components/search";
+@import "components/filters";
 
 // Pages
 @import "pages/pages";
 @import "pages/homepage";
 @import "pages/awards";
+@import "pages/contact";
