--- a/web/assets/scss/components/_header.scss
+++ b/web/assets/scss/components/_header.scss
@@ -43,7 +43,7 @@ body {
 
 #sticky-header {
   @include hardware-acceleration;
-  transition: opacity 0.2s, height 0.2s;
+  transition: opacity 0.2s;
 
   &.-stuck {
     position: fixed;
