--- a/web/assets/scss/pages/_awards.scss
+++ b/web/assets/scss/pages/_awards.scss
@@ -100,7 +100,7 @@ table.sortable {
     }
   }
   .icon-down-arrow {
-    transition: transform .2s $ease;
+    transition: transform 0.2s $ease;
   }
   .headerSortUp {
     .icon-down-arrow {
