--- a/web/assets/scss/components/_filters.scss
+++ b/web/assets/scss/components/_filters.scss
@@ -67,6 +67,7 @@ body.nav-stuck {
     overflow: hidden;
     transition: all 0.2s $ease;
     a {
+      position: relative;
       display: block;
       padding: $beat 0;
       text-decoration: none;
@@ -76,10 +77,23 @@ body.nav-stuck {
       &.current a {
         color: $red;
       }
+      &.current a {
+        &::after {
+          right: 2px;
+          top: 18px;
+          content: '';
+          width: 10px;
+          height: 10px;
+          position: absolute;
+          background: url('../svgs/icon-right-arrow-red.svg') no-repeat;
+          background-size: contain;
+        }
+      }
     }
 
     @include media-sm {
       columns: 3 240px;
+      column-gap: 40px;
     }
   }
 
