--- a/templates/contact/index.html
+++ b/templates/contact/index.html
@@ -16,12 +16,12 @@
 {% block content %}
 
 <div class="row -halves">
-  <div class="row-block pull-to-top-h1">
+  <div class="row-block">
     <div class="module text-module">
       <div class="font-h1 no-margin user-content">{{ entry.body }}</div>
     </div>
   </div>
-  <div class="row-block pull-to-top">
+  <div class="row-block">
     <div class="module text-module">
       <div class="buttons">
         <a href="#general" class="button   smoothscroll">
