--- a/web/assets/scss/components/_search.scss
+++ b/web/assets/scss/components/_search.scss
@@ -74,11 +74,11 @@
   padding: 0 2*$beat 2*$beat 0;
 
   .icon-search {
-    top: 3px;
+    top: 2px;
     fill: $black;
     width: 10.5px;
     height: 10.5px;
-    margin-left: $beat*2;
+    margin-left: 12px;
     position: relative;
   }
 
