--- a/templates/about/careers/index.html
+++ b/templates/about/careers/index.html
@@ -1,10 +1,7 @@
 {% extends (craft.app.request.isAjax and not craft.app.request.isLivePreview) ? "_ajax-layout" : "_layout" %}
 
 {% block filters %}
-  <h2 class="font-nav"><a href="/about/">About</a></h2>
-  <ul class="filters semantic-only-list">
-    <li class="current"><a href="/about/careers/">Careers</a></li>
-  </ul>
+  {% include 'partials/_about-nav' %}
 {% endblock %}
 
 {% block content %}
