--- a/templates/offices/_entry.html
+++ b/templates/offices/_entry.html
@@ -66,7 +66,7 @@
           {% if entry.officeLeaders|length %}
             <div class="meta-item -full">
               <h3>Office Leaders</h3>
-              <div class="content">
+              <div class="content -spaced">
                 <ul class="semantic-only-list">
                   {% for leader in entry.officeLeaders.all() %}
                     {% set person = leader.aeiPerson.one() %}
