--- a/web/assets/scss/components/_search.scss
+++ b/web/assets/scss/components/_search.scss
@@ -71,7 +71,7 @@
   &:hover {
     text-decoration: underline;
   }
-  padding: 0 2*$beat 2*$beat 0;
+  padding: 4px 2*$beat 4px 4px;
 
   .icon-search {
     top: 2px;
