--- a/web/assets/scss/main.scss
+++ b/web/assets/scss/main.scss
@@ -43,5 +43,6 @@
 // Pages
 @import "pages/pages";
 @import "pages/homepage";
+@import "pages/services";
 @import "pages/awards";
 @import "pages/contact";
